--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -71,6 +71,37 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearTipoUsuario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="Usuário"
+            android:textColor="@android:color/black" />
+
+        <Switch
+            android:id="@+id/switchTipoUsuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="Empresa"
+            android:textColor="@android:color/black" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/buttonAcesso"
         android:layout_width="match_parent"
