feat: Adicionar RecyclerView à EmpresaActivity e Configurar Toolbar
- Atualizado activity_empresa.xml para incluir RecyclerView com ID recyclerProdutos
- Criado ProdutoAdapter.java para gerenciar itens no RecyclerView
- Criado layout item_produto.xml para itens do RecyclerView
- Configurado RecyclerView na EmpresaActivity.java para exibir lista de produtos
- Atualizada configuração da toolbar na EmpresaActivity.java

Alterações feitas em:
- activity_configuracoes_empresa.xml: ajustes menores de layout
- activity_empresa.xml: adicionado RecyclerView para exibição de produtos
- activity_novo_produto_empresa.xml: ajustes menores de layout
- AndroidManifest.xml: adicionadas atividades e permissões necessárias
- AutenticacaoActivity.java: ajustado fluxo de autenticação
- build.gradle (Módulo: app): atualizadas dependências e configurações
- build.gradle (Projeto): atualizadas configurações a nível de projeto
- ConfiguracoesEmpresaActivity.java: integrada nova toolbar e layout
- EmpresaActivity.java: configurado RecyclerView e toolbar
- gradle.properties: atualizadas propriedades do projeto
- ic_adicionar_24.xml: adicionado novo ícone para adicionar produtos
- MainActivity.java: ajustes menores
- menu_empresa.xml: adicionados itens de menu para toolbar
- NovoProdutoEmpresaActivity.java: integrada nova toolbar e layout
- settings.gradle: atualizadas configurações do projeto
- styles.xml: atualizados estilos para nova toolbar e layouts
- toolbar.xml: criado layout da toolbar
- UsuarioFirebase.java: ajustados métodos de autenticação Firebase

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/color1</item>
+        <item name="colorPrimaryDark">@color/color2</item>
+        <item name="colorAccent">@color/color3</item>
+        <!-- Desativa a ActionBar fornecida pelo decorador da janela -->
+        <item name="windowActionBar">false</item>
+        <!-- Necessário para o suporte de ActionBar -->
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="botaoPadrao" parent="Theme.AppCompat.Light">
         <item name="colorControlHighlight">#ff404e</item>
         <item name="colorButtonNormal">@color/color3</item>
