--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp">
@@ -9,7 +10,7 @@
         android:id="@+id/titleText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Receba seus remédios sem sair de casa!"
+        android:text="@string/receba_seus_rem_dios_sem_sair_de_casa"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -20,13 +21,13 @@
 
     <ImageView
         android:id="@+id/logoImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/logolema"
-        app:layout_constraintTop_toBottomOf="@id/titleText"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="320dp"
+        android:layout_height="190dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleText" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailInputLayout"
@@ -77,7 +78,7 @@
             android:id="@+id/forgotPasswordLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Esqueceu senha?"
+            android:text="@string/esqueceu_senha"
             android:textColor="@color/blue_500"
             android:layout_weight="1"/>
 
@@ -107,7 +108,7 @@
         android:id="@+id/socialDivider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ou conectar com Mídia Social"
+        android:text="@string/ou_conectar_com_m_dia_social"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/buttonAcesso"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,11 +118,11 @@
         android:id="@+id/googleButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Continuar com Google"
+        android:text="@string/continuar_com_google"
         android:textAllCaps="false"
         android:padding="16dp"
         android:layout_marginTop="16dp"
-        app:icon="@drawable/common_google_signin_btn_icon_dark"
+        app:icon="@drawable/icons8_google_36"
         app:iconGravity="start"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintTop_toBottomOf="@id/socialDivider"
@@ -132,12 +133,13 @@
         android:id="@+id/facebookButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Continuar com Facebook"
+        android:text="@string/continuar_com_facebook"
         android:textAllCaps="false"
         android:padding="16dp"
         android:layout_marginTop="16dp"
         app:icon="@drawable/icons8_facebook_36"
         app:iconGravity="start"
+        app:iconTint="@null"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintTop_toBottomOf="@id/googleButton"
         app:layout_constraintStart_toStartOf="parent"
