--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -26,48 +26,57 @@
 
         <ImageView
             android:id="@+id/logoImage"
-            android:layout_width="320dp"
-            android:layout_height="190dp"
+            android:layout_width="wrap_content"
+            android:layout_height="180dp"
             android:layout_marginTop="32dp"
             android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleText" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/emailInputLayout"
+        <TextView
+            android:id="@+id/taglineText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sempre_que_precisar_estarei_l_medlife_cuidando_do_seu_bem_estar"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/logoImage"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"/>
+
+        <EditText
+            android:id="@+id/editCadastroEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/logoImage"
+            android:background="@drawable/bg_edit_text"
+            android:ems="10"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:padding="12dp"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/taglineText"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editCadastroEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordInputLayout"
+        <EditText
+            android:id="@+id/editCadastroSenha"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:passwordToggleEnabled="true"
-            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
+            android:background="@drawable/bg_edit_text"
+            android:ems="10"
+            android:hint="@string/senha"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:textSize="14sp"
+            android:password="true"
+            app:layout_constraintTop_toBottomOf="@id/editCadastroEmail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editCadastroSenha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/senha"
-                android:inputType="textPassword"/>
-        </com.google.android.material.textfield.TextInputLayout>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <LinearLayout
             android:id="@+id/linksLayout"
@@ -75,23 +84,23 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
+            app:layout_constraintTop_toBottomOf="@id/editCadastroSenha"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
                 android:id="@+id/forgotPasswordLink"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/esqueceu_senha"
-                android:textColor="@color/blue_500"
-                android:layout_weight="1"/>
+                android:textColor="@color/blue_500" />
 
             <TextView
                 android:id="@+id/registerLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/cadastre_se"
+                android:text="@string/registrar_se"
                 android:textColor="@color/blue_500"/>
         </LinearLayout>
 
@@ -99,12 +108,13 @@
             android:id="@+id/buttonAcesso"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/acessar"
+            android:text="@string/entrar_com_medlife"
             android:textAllCaps="false"
             android:padding="16dp"
             android:layout_marginTop="32dp"
-            app:icon="@drawable/ic_action_navigation_arrow_back_inverted"
+            app:icon="@drawable/baseline_login_24"
             app:iconGravity="start"
+            android:backgroundTint="@color/blue_500"
             app:layout_constraintTop_toBottomOf="@id/linksLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -129,7 +139,8 @@
             android:layout_marginTop="16dp"
             app:icon="@drawable/icons8_google_36"
             app:iconGravity="start"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/Widget.MaterialComponents.Button"
+            android:backgroundTint="@color/googleLogin"
             app:layout_constraintTop_toBottomOf="@id/socialDivider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -145,11 +156,12 @@
             app:icon="@drawable/icons8_facebook_36"
             app:iconGravity="start"
             app:iconTint="@null"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/Widget.MaterialComponents.Button"
+            android:backgroundTint="@color/color4"
             app:layout_constraintTop_toBottomOf="@id/googleButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />  <!-- Adicionado para garantir que o ConstraintLayout se expanda -->
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
