--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,8 @@
         <!-- Primary brand color. -->
 <!--        <item name="colorPrimary">@color/color1</item>-->
 <!--        <item name="colorPrimaryVariant">@color/color2</item>-->
-<!--        <item name="colorOnPrimary">@color/white</item>-->
-<!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
 <!--        <item name="colorSecondary">@color/color3</item>-->
 <!--        <item name="colorSecondaryVariant">@color/color4</item>-->
         <item name="colorOnSecondary">@color/googleLogin</item>
@@ -16,5 +16,10 @@
         <item name="colorPrimaryVariant">@color/blue_700</item>
         <item name="android:statusBarColor">@android:color/white</item>
         <item name="android:windowLightStatusBar">true</item>
+
+        <!-- TextInputLayout styling -->
+        <item name="boxStrokeColor">@color/blue_500</item>
+        <item name="hintTextColor">@color/blue_500</item>
+        <item name="android:textColorHint">@color/blue_500</item>
     </style>
 </resources>
