--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -19,6 +19,7 @@
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
+            android:fontFamily="@font/gilroysemibold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,6 +43,7 @@
             android:textColor="@android:color/black"
             android:textSize="12sp"
             android:textAlignment="center"
+            android:fontFamily="@font/gilroymedium"
             app:layout_constraintTop_toBottomOf="@id/logoImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +60,7 @@
             android:inputType="textEmailAddress"
             android:padding="12dp"
             android:textSize="14sp"
+            android:fontFamily="@font/gilroymedium"
             app:layout_constraintTop_toBottomOf="@id/taglineText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -74,6 +77,7 @@
             android:padding="12dp"
             android:textSize="14sp"
             android:password="true"
+            android:fontFamily="@font/gilroymedium"
             app:layout_constraintTop_toBottomOf="@id/editCadastroEmail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -94,14 +98,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/esqueceu_senha"
-                android:textColor="@color/blue_500" />
+                android:textColor="@color/blue_500"
+                android:fontFamily="@font/gilroysemibold"/>
 
             <TextView
                 android:id="@+id/registerLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/registrar_se"
-                android:textColor="@color/blue_500"/>
+                android:textColor="@color/blue_500"
+                android:fontFamily="@font/gilroysemibold"/>
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
@@ -115,6 +121,7 @@
             app:icon="@drawable/baseline_login_24"
             app:iconGravity="start"
             android:backgroundTint="@color/blue_500"
+            android:fontFamily="@font/gilroysemibold"
             app:layout_constraintTop_toBottomOf="@id/linksLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -125,6 +132,7 @@
             android:layout_height="wrap_content"
             android:text="@string/ou_conectar_com_m_dia_social"
             android:layout_marginTop="24dp"
+            android:fontFamily="@font/gilroysemibold"
             app:layout_constraintTop_toBottomOf="@id/buttonAcesso"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -141,6 +149,7 @@
             app:iconGravity="start"
             style="@style/Widget.MaterialComponents.Button"
             android:backgroundTint="@color/googleLogin"
+            android:fontFamily="@font/gilroysemibold"
             app:layout_constraintTop_toBottomOf="@id/socialDivider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -158,6 +167,7 @@
             app:iconTint="@null"
             style="@style/Widget.MaterialComponents.Button"
             android:backgroundTint="@color/color4"
+            android:fontFamily="@font/gilroysemibold"
             app:layout_constraintTop_toBottomOf="@id/googleButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
