--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,10 +28,11 @@
             android:id="@+id/titleText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Registrar-se"
+            android:text="@string/registrar_se"
             android:textSize="26sp"
             android:textStyle="bold"
             android:textColor="#030303"
+            android:fontFamily="@font/gilroy"
             app:layout_constraintTop_toBottomOf="@id/logoImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,9 +43,10 @@
             android:id="@+id/taglineText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Digite suas informações para continuar"
+            android:text="@string/digite_suas_informa_es_para_continuar"
             android:textColor="#7C7C7C"
             android:textSize="16sp"
+            android:fontFamily="@font/gilroy"
             app:layout_constraintTop_toBottomOf="@id/titleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -66,10 +68,13 @@
                 android:id="@+id/editNomeCompleto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nome Completo"
+                android:hint="@string/nome_completo"
                 android:inputType="textPersonName"
                 android:background="@null"
-                android:paddingBottom="12dp"/>
+                android:paddingBottom="12dp"
+                android:fontFamily="@font/gilroymedium"
+                android:textSize="18sp"
+                android:textColor="#030303"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <View
@@ -97,10 +102,13 @@
                 android:id="@+id/editCadastroEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:background="@null"
-                android:paddingBottom="12dp"/>
+                android:paddingBottom="12dp"
+                android:fontFamily="@font/gilroymedium"
+                android:textSize="18sp"
+                android:textColor="#030303"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <View
@@ -130,10 +138,13 @@
                 android:id="@+id/editCadastroSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Senha"
+                android:hint="@string/senha"
                 android:inputType="textPassword"
                 android:background="@null"
-                android:paddingBottom="12dp"/>
+                android:paddingBottom="12dp"
+                android:fontFamily="@font/gilroymedium"
+                android:textSize="18sp"
+                android:textColor="#030303"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <View
@@ -173,7 +184,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/politica_de_privacidade"
                 android:textColor="#7C7C7C"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                android:fontFamily="@font/gilroymedium"/>
 
         </LinearLayout>
 
@@ -182,7 +194,7 @@
             android:id="@+id/buttonRegister"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Registrar-se"
+            android:text="@string/registrar_se"
             android:textAllCaps="false"
             android:padding="16dp"
             android:layout_marginTop="32dp"
@@ -190,6 +202,8 @@
             app:cornerRadius="19dp"
             android:textColor="#FFF9FF"
             android:textSize="18sp"
+            android:fontFamily="@font/gilroy"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/consentLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -203,11 +217,11 @@
             android:textColor="#030303"
             android:textSize="14sp"
             android:textStyle="bold"
+            android:fontFamily="@font/gilroy"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@id/buttonRegister"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
