feat: Implementação de navegação por fragments e BottomNavigationView
- Adicionados layouts básicos para os fragments: `fragment_cart.xml`, `fragment_favorite.xml`, `fragment_home.xml`, `fragment_profile.xml`, `fragment_search.xml`.
- Criadas classes Java para os fragments: `CartFragment.java`, `FavoriteFragment.java`, `HomeFragment.java`, `ProfileFragment.java`, `SearchFragment.java`.
- Configurada a `HomeActivity.java` para utilizar `BottomNavigationView` e carregar os respectivos fragments ao selecionar um item.
- Adicionado `FrameLayout` com ID `contentFrame` em `activity_home.xml` para hospedar os fragments.
- Definidas strings para os títulos dos itens de menu em `strings.xml` (`novo_produto`, `configura_es`, `sair`, `favorito`).
- Atualizados os menus `menu.xml` e `menu_empresa.xml` para utilizar as novas strings.

Alterações:
- `app/src/main/java/medlife/com/br/activity/HomeActivity.java`: Implementada a lógica de navegação entre fragments.
- `app/src/main/java/medlife/com/br/fragments/CartFragment.java`: (Novo) Fragmento para o carrinho.
- `app/src/main/java/medlife/com/br/fragments/FavoriteFragment.java`: (Novo) Fragmento para os favoritos.
- `app/src/main/java/medlife/com/br/fragments/HomeFragment.java`: (Novo) Fragmento para a tela inicial.
- `app/src/main/java/medlife/com/br/fragments/ProfileFragment.java`: (Novo) Fragmento para o perfil.
- `app/src/main/java/medlife/com/br/fragments/SearchFragment.java`: (Novo) Fragmento para a busca.
- `app/src/main/res/layout/fragment_cart.xml`: (Novo) Layout do fragmento do carrinho.
- `app/src/main/res/layout/fragment_favorite.xml`: (Novo) Layout do fragmento de favoritos.
- `app/src/main/res/layout/fragment_home.xml`: (Novo) Layout do fragmento da tela inicial.
- `app/src/main/res/layout/fragment_profile.xml`: (Novo) Layout do fragmento do perfil.
- `app/src/main/res/layout/fragment_search.xml`: (Novo) Layout do fragmento de busca.
- `app/src/main/res/menu/menu.xml`: Atualizado título do item "Favorito".
- `app/sr

--- a/app/src/main/res/menu/menu_empresa.xml
+++ b/app/src/main/res/menu/menu_empresa.xml
@@ -6,17 +6,17 @@
     <item
         android:id="@+id/menuNovoProduto"
         android:icon="@drawable/ic_adicionar_24"
-        android:title="Novo Produto"
+        android:title="@string/novo_produto"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/menuConfiguracoes"
-        android:title="Configurações"
+        android:title="@string/configura_es"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menuSair"
-        android:title="Sair"
+        android:title="@string/sair"
         app:showAsAction="never" />
 
 </menu>
