--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -18,7 +18,7 @@
     <item
         android:id="@+id/navigation_favorite"
         android:icon="@drawable/ic_favorite"
-        android:title="Favorito" />
+        android:title="@string/favorito" />
 
     <item
         android:id="@+id/navigation_profile"
