--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,20 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.HomeActivity">
 
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/receba_seus_rem_dios_sem_sair_de_casa"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="48dp"/>
-
-    <!-- Content above the bottom bar will go here -->
+    <!-- Content Frame for Fragments -->
     <FrameLayout
         android:id="@+id/contentFrame"
         android:layout_width="0dp"
@@ -29,8 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Your existing or new content for the Home screen -->
-
+        <!-- Title will be moved to HomeFragment -->
     </FrameLayout>
 
     <!-- Bottom Navigation Bar -->
